# annotate_pr_with_ruff

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yml  entrypoint.py  entrypoint.sh  pyproject.toml  requirements.txt
annotate_pr_with_ruff/: changeutils.py  github_utils.py  main.py  ruff.py  ruff_utils.py
