[tool.poetry]
name = "annotate_pr_with_ruff"
version = "0.1.0"
description = "Annotate PR with ruff"
authors = ["Enrique Soria"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
ruff = "^0.0.114"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
annotate_pr_with_ruff = "annotate_pr_with_ruff.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
